src/math_ops/snapshots/rbx_types_ops__math_ops__color3__color3_mult_f32.snap
---
source: src/math_ops/color3.rs
expression: "Color3::new(1.0, 0.5, 0.2).mult(&10.0f32.into())"
---
Color3:
  - 10
  - 5
  - 2
