src/math_ops/snapshots/rbx_types_ops__math_ops__color3__color3_pow_f32.snap
---
source: src/math_ops/color3.rs
expression: "Color3::new(1.0, 0.5, 0.2).pow(&5.0f32.into())"
---
Color3:
  - 1
  - 0.03125
  - 0.00032000002
